# lmd-2-multi-agent

./: .env.example  .gitignore  Dockerfile  README.md  agent.py  agent_prompt.md  benchmark.py  fable5_prompt_lmd2.md  kpi_context.md  main.py  pyproject.toml  requirements.txt  start-dev.sh
.github/workflows/: deploy.yml
app/: __init__.py  config.py  graph.py  logging.py  main.py  models.py  state.py
app/agents/: __init__.py  final_answer.py  master_orchestrator.py  prompts.py  sql_corrector.py  sql_generator.py  visualization_agent.py
app/data/: dashboard_context.json
app/prompts/: final_answer.md  master_orchestrator.md  sql_corrector.md  sql_generator.md  visualization_agent.md
app/services/: __init__.py  bedrock.py  chat_memory.py  dashboard_context.py  redshift.py  result_formatter.py  retry_controller.py  schema_cache.py  sql_validator.py
tests/: __init__.py  test_agent.py  test_benchmark.py  test_chat_memory.py  test_config.py  test_dashboard_context.py  test_graph_env_integration.py  test_graph_routes.py  test_main_api.py  test_redshift.py  test_result_formatter.py  test_retry_controller.py  test_schema_cache.py  test_sql_validator.py  test_visualization_agent.py
