[project]
name = "kpi-analytics-agent"
version = "0.1.0"
description = "FastAPI + LangGraph text-to-SQL analytics agent for KPI data."
requires-python = ">=3.13,<3.14"
dependencies = [
  "asyncpg>=0.29.0",
  "boto3>=1.34.0",
  "fastapi>=0.111.0",
  "json2xml>=5.0.5",
  "langgraph>=0.2.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "redshift-connector>=2.1.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
